# blakjaks-platform

./: .env.local.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-test.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_fix_tiers.py  003_seed_tiers.py  004_add_cart_items.py  005_seed_products.py  006_remove_discount_pct.py  007_add_device_tokens.py  008_add_chat_models.py  009_seed_channels.py  010_add_affiliate_models.py  011_add_governance_models.py  012_restore_multipliers.py  013_transparency_metrics.py  014_treasury_snapshots.py  015_teller_accounts.py  016_live_streams.py  017_tier_history.py  018_audit_logs.py  019_020_wholesale.py  019_wholesale.py  020_social_message_translations.py  021_governance.py  021_member_id_seq.py  022_dwolla.py  022_social_reactions.py  023_comp_balance.py  023_social_translations.py  024_rename_usdt_to_usdc.py  025_add_missing_user_columns.py  026_channel_tier_access.py  026_email_verified.py  027_add_message_sequence.py  028_restructure_channels_and_votes.py  029_saved_emotes.py
backend/app/: celery_app.py  main.py
backend/app/api/: affiliate.py  auth.py  bootstrap.py  deps.py  dev_tools.py  dwolla.py  emotes.py  giphy.py  governance.py  insights.py  notifications.py  oobit.py  router.py  scans.py  shop.py  social.py  social_ws.py  streams.py  treasury.py  users.py  wallet.py  wholesale.py
backend/app/core/: config.py  security.py
backend/tests/: conftest.py  test_affiliate.py  test_auth.py  test_avatar_service.py  test_b1_multipliers.py  test_b2_migrations.py  test_blockchain.py  test_celery.py  test_config.py  test_dwolla_service.py  test_giphy_service.py  test_governance.py  test_governance_service.py  test_insights_service.py  test_intercom_service.py  test_kms_service.py  test_livestream_service.py  test_monitoring.py  test_notifications.py  test_oobit_service.py  test_push_service.py  test_reaction_service.py  test_redis_client.py  test_redis_keys.py  test_redis_service.py  test_scan_enrichment.py  test_scans.py  test_security.py  test_shop.py  test_social.py  test_stargate_service.py  test_teller_service.py  test_timescale_service.py  test_translation_service.py  test_treasury.py  test_user_service.py  test_users.py  test_wallet.py  test_wholesale_service.py
(+715 files in other folders)
